- Fix for bug 1909 - Fix for bug 1902 - Fix for bug 1908 - code cleanups - Rearrange user menu - Help file for gene groups (incomplete)